# msc-uoy-dissertation

./: .envrc  .gitignore  CMakeLists.txt  README.md  bibliography.bib  dissertation.tex  flake.nix  notebook.ipynb
nix/: shell.nix
src/: main.cpp  model.h  monte_carlo.h  pde.h  python.cpp
